[package]
name = "cch23-lpnh"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.2"
base64 = "0.21.5"
cch23-validator = "21.0.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
rustemon = "3.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.2"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"

[dev-dependencies]
http-body-util = "0.1.0"
tower = "0.4.13"
